--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,16 +1,15 @@
 ---
-name: 需求反馈
-about: PaddleNLP需求反馈
+name: 问题反馈
+about: PaddleNLP问题反馈
 title: ''
 labels: ''
 assignees: ''
 
 ---
 
-欢迎您对PaddleNLP提出建议，非常感谢您对PaddleNLP的贡献！
-在留下您的建议时，辛苦您同步提供如下信息：
-- 您想要增加什么新特性？
-- 什么样的场景下需要该特性？
-- 没有该特性的条件下，PaddleNLP目前是否能间接满足该需求？
-- 增加该特性，PaddleNLP可能需要变化的部分。
-- 如果可以的话，简要描述下您的解决方案
+欢迎您反馈PaddleNLP使用问题，非常感谢您对PaddleNLP的贡献！
+在留下您的问题时，辛苦您同步提供如下信息：
+- 版本、环境信息
+1）PaddleNLP和PaddlePaddle版本：请提供您的PaddleNLP和PaddlePaddle版本号，例如PaddleNLP 2.0.4，PaddlePaddle2.1.1
+2）系统环境：请您描述系统类型，例如Linux/Windows/MacOS/，python版本
+- 复现信息：如为报错，请给出复现环境、复现步骤
