text_classification_application_bug_fix (#3765)
* bug_fix

--- a/applications/text_classification/hierarchical/analysis/word_interpret.ipynb
+++ b/applications/text_classification/hierarchical/analysis/word_interpret.ipynb
@@ -112,6 +112,7 @@
     "            items = line.strip().split('\\t')\n",
     "            if items[0] == 'Text':\n",
     "                continue\n",
+    "            items[0] = items[0][:MAX_LENGTH-2]\n",
     "            if len(items) == 3:\n",
     "                yield {'text': items[0], 'label': items[1], 'predict': items[2]}\n",
     "            elif len(items) == 2:\n",
