--- a/docs/locale/en/LC_MESSAGES/source/paddlenlp.transformers.ernie.faster_tokenizer.po
+++ b/docs/locale/en/LC_MESSAGES/source/paddlenlp.transformers.ernie.faster_tokenizer.po
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.10.1\n"
 
-#: ../source/paddlenlp.transformers.ernie.faster_tokenizer.rst:2
-msgid "faster\\_tokenizer"
+#: ../source/paddlenlp.transformers.ernie.fast_tokenizer.rst:2
+msgid "fast\\_tokenizer"
 msgstr ""
 
