update text classification (#4279)
* update_text_classification

* update_according_to_the_comments

--- a/applications/text_classification/multi_class/analysis/word_interpret.ipynb
+++ b/applications/text_classification/multi_class/analysis/word_interpret.ipynb
@@ -160,14 +160,8 @@
     "paddle.set_device(DEVICE)\n",
     "\n",
     "# Define model & tokenizer\n",
-    "if os.path.exists(os.path.join(\n",
-    "        PARAM_PATH, \"model_state.pdparams\")) and os.path.exists(\n",
-    "            os.path.join(PARAM_PATH,\n",
-    "                            \"model_config.json\")) and os.path.exists(\n",
-    "                                os.path.join(PARAM_PATH,\n",
-    "                                            \"tokenizer_config.json\")):\n",
-    "    model = AutoModelForSequenceClassification.from_pretrained(\n",
-    "        PARAM_PATH)\n",
+    "if os.path.exists(PARAM_PATH):\n",
+    "    model = AutoModelForSequenceClassification.from_pretrained(PARAM_PATH)\n",
     "    tokenizer = AutoTokenizer.from_pretrained(PARAM_PATH)\n",
     "else:\n",
     "    raise ValueError(\"The {} should exist.\".format(PARAM_PATH))\n",
