[FastTokenizer] Add unittest for fast_tokenizer (#4339)
* with_added_tokens->with_added_vocabulary

* faster->fast

* Add fast_tokenizer to test and ci requirements

* Add unittest for BertTokenizerFast

* faster->fast

* Add ernie tokenizer fast unittest

* fast_tokenizer->fast_tokenizer_python

* Add fast_tokenizer_python

* Add TinyBertFastTokenizer unittest

* Add ernie-m tokenizer unittest

* Add \n for tests/requirements.txt

* Add test_sequence_builders for ErnieMFastTokenizer

* Add full tokenizer test for fast_tokenizer

* Add use_faster args test

* Add test_fast_and_python_full_tokenizer

--- a/docs/locale/en/LC_MESSAGES/source/paddlenlp.transformers.tokenizer_utils_fast.po
+++ b/docs/locale/en/LC_MESSAGES/source/paddlenlp.transformers.tokenizer_utils_fast.po
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.10.1\n"
 
-#: ../source/paddlenlp.transformers.tokenizer_utils_faster.rst:2
-msgid "tokenizer\\_utils\\_faster"
+#: ../source/paddlenlp.transformers.tokenizer_utils_fast.rst:2
+msgid "tokenizer\\_utils\\_fast"
 msgstr ""
 
